5.1.5 (2015-05-29)
UPD: remove deprecation warning for Isengard

5.1.4 (2015-05-26)
ADD: Frodo support (only if you install via zip or bromix repo)
UPD: new API-KEY - thanks to the guy for hijacking the key for trailer searches
UPD: UPD: Russian (thx 2 BytEvil)
FIX: cache wasn't working correctly without login

5.1.3 (2015-05-16)
UPD: code cleaning
FIX: minor fixes

5.1.2 (2015-05-15)
ADD: ask for video quality (optional)
UPD: code cleaning
UPD: Russian (thx 2 BytEvil)
UPD: kodion
FIX: add 'Play all' for playlist (again)

5.1.1 (2015-05-10)
ADD: 'More...' in context menu to provide more items
ADD: show deprecation warning of old plugin calls starting with Isengard
ADD: EndPoint: 'plugin://plugin.video.youtube/search/?q=[URL_ENC_TEXT]'
ADD: API Key for each major version of KODI
UPD: Ukrainian (thx 2 Dukobpa3)
UPD: Russian (thx 2 BytEvil)
UPD: new second fanart
UPD: reorganized context menu
UPD: improved logging (debug only)
UPD: Improved error handling
FIX: refresh after rating a video (own playlist only)
FIX: add 'refresh' again for 'My subscriptions'
DEL: removed old v2 API

5.1.0 (2015-04-22)
ADD: Double login to support 'My subscriptions' via YouTube TV API
ADD: 'More Links from the description' - extracts further links from the description
ADD: Korean (thx 2 piodio)
UPD: removed old implementation of 'My Subscriptions'
UPD: new fanart and icon
UPD: changed credentials
UPD: minimal quota-optimization
UPD: French (thx 2 eauland)
UPD: YouTube relevant description links - improved extraction and resolving of video/playlist urls
UPD: YouTube relevant description links - improved extraction and resolving of user/channel urls
UPD: YouTube relevant description links - improved performance resolving urls with caching
UPD: regex optimizations for season and expisode extraction
FIX: support fanart of channel in new implementation of 'My Subscriptions'
FIX: YouTube relevant description links - script error while some server return garbage for a location